--- a/package.json
+++ b/package.json
@@ -1,47 +1,57 @@
 {
-  "name": "p11-front",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@react-google-maps/api": "^2.19.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-google-places-autocomplete": "^4.0.1",
-    "react-router-dom": "^6.21.1",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
-  },
-  "proxy": "https://maps.googleapis.com"
+    "name": "p11-front",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@react-google-maps/api": "^2.19.2",
+        "@testing-library/user-event": "^13.5.0",
+        "chai": "^5.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-google-places-autocomplete": "^4.0.1",
+        "react-helmet": "^6.1.0",
+        "react-router-dom": "^6.21.1",
+        "react-scripts": "^5.0.1",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "test:selenium": "wdio wdio.conf.js",
+        "eject": "react-scripts eject",
+        "wdio": "wdio run ./wdio.conf.js"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.2.0",
+        "@testing-library/react": "^14.1.2",
+        "@wdio/cli": "^8.27.1",
+        "@wdio/local-runner": "^8.27.0",
+        "@wdio/mocha-framework": "^8.27.0",
+        "@wdio/selenium-standalone-service": "^8.15.0",
+        "@wdio/spec-reporter": "^8.27.0",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "jest": "^29.7.0"
+    },
+    "proxy": "https://maps.googleapis.com"
 }
